query parser html templates

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -48,8 +48,8 @@
             <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
             <div class="scan-disable">
-                <div id="query-parser-select" class="input-group"></div>
-                <div id="query-parser"></div>
+                <div id="query-parser-select-container" class="input-group"></div>
+                <div id="query-parser-content"></div>
             </div>
 
             <hr>
@@ -78,7 +78,6 @@
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/japanese.js"></script>
-        <script src="/bg/js/templates.js"></script>
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/audio.js"></script>
@@ -87,7 +86,9 @@
         <script src="/mixed/js/display-generator.js"></script>
         <script src="/mixed/js/scroll.js"></script>
         <script src="/mixed/js/text-scanner.js"></script>
+        <script src="/mixed/js/template-handler.js"></script>
 
+        <script src="/bg/js/search-query-parser-generator.js"></script>
         <script src="/bg/js/search-query-parser.js"></script>
         <script src="/bg/js/clipboard-monitor.js"></script>
         <script src="/bg/js/search.js"></script>
