remove newline from template

--- a/ext/bg/query-parser-templates.html
+++ b/ext/bg/query-parser-templates.html
@@ -5,8 +5,7 @@
 <template id="segment-template"><ruby class="query-parser-segment"><span class="query-parser-segment-text"></span><rt class="query-parser-segment-reading"></rt></ruby></template>
 <template id="char-template"><span class="query-parser-char"></span></template>
 
-<template id="select-template"><select class="query-parser-select form-control">
-</select></template>
+<template id="select-template"><select class="query-parser-select form-control"></select></template>
 <template id="select-option-template"><option class="query-parser-select-option"></option></template>
 
 </body></html>
