Move japanese.js into bg

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -31,6 +31,7 @@
         <script src="/bg/js/deinflector.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
+        <script src="/bg/js/japanese.js"></script>
         <script src="/bg/js/json-schema.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/profile-conditions.js"></script>
@@ -39,7 +40,6 @@
         <script src="/bg/js/translator.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
-        <script src="/mixed/js/japanese.js"></script>
 
         <script src="/bg/js/backend.js"></script>
     </body>
