hide native popup option for firefox mobile

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -134,7 +134,7 @@
                     <label><input type="checkbox" id="enable"> Enable content scanning</label>
                 </div>
 
-                <div class="checkbox">
+                <div class="checkbox" data-hide-for-browser="firefox-mobile">
                     <label><input type="checkbox" id="enable-clipboard-popups"> Enable native popups when copying Japanese text</label>
                 </div>
 
