--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -15,7 +15,7 @@
             </div>
             <div class="term-reasons"></div>
         </div>
-        <div class="frequencies"></div>
+        <div class="term-special-tags"><div class="frequencies tag-list"></div></div>
     </div>
     <div class="term-definition-container"><ol class="term-definition-list"></ol></div>
     <pre class="debug-info"></pre>
