--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -35,7 +35,7 @@
                 <h1>Yomichan Updated!</h1>
                 <p>
                     The Yomichan extension has been updated to a new version! In order to continue
-                    viewing definitions on this page you must reload this tab or restart your browser.
+                    viewing definitions on this page, you must reload this tab or restart your browser.
                 </p>
             </div>
         </div>
