Add support for different sections for term content

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -17,7 +17,9 @@
         </div>
         <div class="term-special-tags"><div class="frequencies tag-list"></div></div>
     </div>
-    <div class="term-definition-container"><ol class="term-definition-list"></ol></div>
+    <div class="term-entry-body">
+        <div class="term-entry-body-section term-pitch-accent-container"><h2 class="term-entry-body-section-header term-pitch-accent-header">Pitch Accents</h2><ol class="term-entry-body-section-content term-pitch-accent-group-list"></ol></div>
+    </div>
     <pre class="debug-info"></pre>
 </div></template>
 <template id="term-expression-template"><div class="term-expression"><span class="term-expression-text source-text"></span><div class="term-expression-details">
