--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -22,6 +22,7 @@
         <script src="/mixed/js/dom.js"></script>
 
         <script src="/bg/js/anki.js"></script>
+        <script src="/bg/js/anki-note-builder.js"></script>
         <script src="/bg/js/api.js"></script>
         <script src="/bg/js/mecab.js"></script>
         <script src="/bg/js/audio.js"></script>
