Replace DisplayGenerator._isCharacterKanji with jp.isCodePointKanji

--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -43,6 +43,7 @@
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/dom.js"></script>
         <script src="/mixed/js/api.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
 
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/source.js"></script>
