--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -18,8 +18,8 @@
         <div class="term-special-tags"><div class="frequencies tag-list"></div></div>
     </div>
     <div class="term-entry-body">
-        <div class="term-entry-body-section term-pitch-accent-container"><h2 class="term-entry-body-section-header term-pitch-accent-header">Pitch Accents</h2><ol class="term-entry-body-section-content term-pitch-accent-group-list"></ol></div>
-        <div class="term-entry-body-section term-definition-container"><h2 class="term-entry-body-section-header term-definition-header">Definitions</h2><ol class="term-entry-body-section-content term-definition-list"></ol></div>
+        <div class="term-entry-body-section term-pitch-accent-container"><ol class="term-entry-body-section-content term-pitch-accent-group-list"></ol></div>
+        <div class="term-entry-body-section term-definition-container"><ol class="term-entry-body-section-content term-definition-list"></ol></div>
     </div>
     <pre class="debug-info"></pre>
 </div></template>
