Update settings page to display additional information

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -674,6 +674,10 @@
                         <label class="dict-result-priority-label">Result priority</label>
                         <input type="number" class="form-control dict-priority">
                     </div>
+                    <div class="dict-details-container">
+                        <a class="dict-details-toggle-link">Details...</a>
+                        <div class="dict-details" hidden><div class="dict-details-table"></div></div>
+                    </div>
                     <div class="dict-delete-table">
                         <div>
                             <button class="btn btn-default dict-delete-button">Delete Dictionary</button>
