Rename "only" to "disambiguation" to match naming convention used for pitch accents

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -30,10 +30,10 @@
 </div></div></template>
 <template id="term-definition-item-template"><li class="term-definition-item">
     <div class="term-definition-tag-list tag-list"></div>
-    <div class="term-definition-only-list"></div>
+    <div class="term-definition-disambiguation-list"></div>
     <ul class="term-glossary-list"></ul>
 </li></template>
-<template id="term-definition-only-template"><span class="term-definition-only"></span></template>
+<template id="term-definition-disambiguation-template"><span class="term-definition-disambiguation"></span></template>
 <template id="term-glossary-item-template"><li class="term-glossary-item"><span class="term-glossary-separator"> </span><span class="term-glossary"></span></li></template>
 <template id="term-reason-template"><span class="term-reason"></span><span class="term-reason-separator"> </span></template>
 
