Update license author field to broader to explicitly reflect that Yomichan is an ongoing community project. It really does take a village, and everyone who contributes code owns a part of it :)

--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -17,7 +17,7 @@
         <div class="container">
             <h3>Yomichan License</h3>
 <pre>
-Copyright (C) 2016-2020  Alex Yatskov
+Copyright (C) 2016-2020  Yomichan Authors
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
