--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -492,7 +492,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="translation-collapse-emphatic-sequences">Collapse emphatic character sequences <span class="label-light">(かっっっこいい &rarr; かっこいい)</span></label>
+                    <label for="translation-collapse-emphatic-sequences">Collapse emphatic character sequences <span class="label-light">(すっっごーーい &rarr; すっごーい / すごい)</span></label>
                     <select class="form-control" id="translation-collapse-emphatic-sequences">
                         <option value="false">Disabled</option>
                         <option value="true">Collapse into single character</option>
