--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -24,6 +24,7 @@
 
         <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/anki-note-builder.js"></script>
+        <script src="/bg/js/backend.js"></script>
         <script src="/bg/js/mecab.js"></script>
         <script src="/bg/js/audio-uri-builder.js"></script>
         <script src="/bg/js/backend-api-forwarder.js"></script>
@@ -45,6 +46,6 @@
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio-system.js"></script>
 
-        <script src="/bg/js/backend.js"></script>
+        <script src="/bg/js/background-main.js"></script>
     </body>
 </html>
