--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -185,6 +185,6 @@
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/util.js"></script>
 
-        <script src="/bg/js/context.js"></script>
+        <script src="/bg/js/context-main.js"></script>
     </body>
 </html>
