--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -94,6 +94,7 @@
         <script src="/bg/js/search-query-parser.js"></script>
         <script src="/bg/js/clipboard-monitor.js"></script>
         <script src="/bg/js/search.js"></script>
-        <script src="/bg/js/search-frontend.js"></script>
+
+        <script src="/bg/js/search-main.js"></script>
     </body>
 </html>
