--- a/ext/bg/settings-popup-preview.html
+++ b/ext/bg/settings-popup-preview.html
@@ -129,5 +129,7 @@
         <script src="/fg/js/popup-proxy-host.js"></script>
         <script src="/fg/js/frontend.js"></script>
         <script src="/bg/js/settings/popup-preview-frame.js"></script>
+
+        <script src="/bg/js/settings/popup-preview-frame-main.js"></script>
     </body>
 </html>
