--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -56,7 +56,8 @@
         <script src="/mixed/js/template-handler.js"></script>
 
         <script src="/fg/js/float.js"></script>
-
         <script src="/fg/js/popup-nested.js"></script>
+
+        <script src="/fg/js/float-main.js"></script>
     </body>
 </html>
