--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -6,6 +6,7 @@
         <title></title>
         <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
+        <link rel="icon" type="image/png" href="/mixed/img/icon32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="/mixed/img/icon38.png" sizes="38x38">
         <link rel="icon" type="image/png" href="/mixed/img/icon48.png" sizes="48x48">
         <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
