Add duplicateScope: 'deck' option (#476)
* Add duplicateScope: 'deck' option

* Add option to control duplicate scope

* Use duplicateScope for findNoteIds

* Update location of quotes

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -821,6 +821,14 @@
                     </div>
 
                     <div class="form-group options-advanced">
+                        <label for="duplicate-scope">Duplicate scope</label>
+                        <select class="form-control" id="duplicate-scope">
+                            <option value="collection">Collection</option>
+                            <option value="deck">Deck</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group options-advanced">
                         <label for="screenshot-format">Screenshot format</label>
                         <select class="form-control" id="screenshot-format">
                             <option value="png">PNG</option>
