Dom text scanner fixes (#505)
* Fix test case

* Add test-dom-text-scanner

* Ensure that DOMTextScanner._node never becomes null

* Add remainder

--- a/test/data/html/test-dom-text-scanner.html
+++ b/test/data/html/test-dom-text-scanner.html
@@ -85,7 +85,7 @@
             "expected": {
                 "node": "span:nth-of-type(2)::text",
                 "offset": 6,
-                "content": "小ぢんまり1\n小ぢんまり2"
+                "content": "小ぢんまり1 小ぢんまり2"
             }
         }'
     >
