Text scanning update (#507)
* Fix unity test missing a parameter

* Update docSentenceExtract to not rescan content

--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -103,6 +103,7 @@
         data-end-node-selector="img"
         data-end-offset="0"
         data-result-type="TextSourceElement"
+        data-sentence-extent="100"
         data-sentence="よみちゃん"
     >
         <img src="data:image/gif;base64,R0lGODdhBwAHAIABAAAAAP///ywAAAAABwAHAAACDIRvEaC32FpCbEkKCgA7" alt="よみちゃん" title="よみちゃん" style="width: 70px; height: 70px; image-rendering: crisp-edges; image-rendering: pixelated; display: block;" />
