--- a/test/data/html/test-document2-frame1.html
+++ b/test/data/html/test-document2-frame1.html
@@ -33,10 +33,8 @@ a, a:visited {
     ありがとう
 </div>
 <div>
-    <a href="#" id="fullscreen-link">Toggle fullscreen</a>
-    <script>
-document.querySelector('#fullscreen-link').addEventListener('click', () => toggleFullscreen(document.body), false);
-    </script>
+    <a href="#" class="fullscreen-link">Toggle fullscreen</a>
+    <script>setup(document.body, document.body);</script>
 </div>
 </div></body>
 </html>
