--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -54,8 +54,8 @@
             <hr>
 
             <div id="navigation-header" class="navigation-header" hidden><div class="navigation-header-actions">
-                <button class="action-button action-previous"><img src="/mixed/img/source-term.svg" class="icon-image" title="Source term (Alt + B)" alt></button>
-                <button class="action-button action-next"><img src="/mixed/img/source-term.svg" class="icon-image" title="Next term (Alt + F)" alt></button>
+                <button class="action-button action-previous" data-icon="source-term" title="Source term (Alt + B)"></button>
+                <button class="action-button action-next" data-icon="source-term" title="Next term (Alt + F)"></button>
             </div></div><div class="navigation-header-spacer"></div>
 
             <div id="content"></div>
