Create class to abstract access, mutation, and events for settings (#565)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1147,6 +1147,7 @@
         <script src="/bg/js/settings/dictionaries.js"></script>
         <script src="/bg/js/settings/popup-preview.js"></script>
         <script src="/bg/js/settings/profiles.js"></script>
+        <script src="/bg/js/settings/settings-controller.js"></script>
         <script src="/bg/js/settings/storage.js"></script>
 
         <script src="/bg/js/settings/main.js"></script>
