--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -180,6 +180,7 @@
         </div>
 
         <script src="/mixed/js/core.js"></script>
+        <script src="/mixed/js/comm.js"></script>
         <script src="/mixed/js/dom.js"></script>
         <script src="/mixed/js/api.js"></script>
 
