--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -27,7 +27,7 @@
 
             <ol>
                 <li>Click on the <img src="/mixed/img/yomichan-icon.svg" alt> icon in the browser toolbar to open the Yomichan actions dialog.</li>
-                <li>Click on the <em>monkey wrench</em> icon in the middle to open the options page.</li>
+                <li>Click on the <em>cog</em> icon in the middle to open the options page.</li>
                 <li>Import the dictionaries you wish to use for term and Kanji searches.</li>
                 <li>Hold down <kbd>Shift</kbd> key or the middle mouse button as you move your mouse over text to display definitions.</li>
                 <li>Click on the <img src="/mixed/img/play-audio.svg" alt> icon to hear the term pronounced by a native speaker.</li>
