--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1133,6 +1133,7 @@
         <script src="/mixed/lib/wanakana.min.js"></script>
 
         <script src="/mixed/js/core.js"></script>
+        <script src="/mixed/js/yomichan.js"></script>
         <script src="/mixed/js/comm.js"></script>
         <script src="/mixed/js/dom.js"></script>
         <script src="/mixed/js/environment.js"></script>
