Rename GenericDatabase to Database (#634)

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -31,7 +31,7 @@
         <script src="/bg/js/audio-uri-builder.js"></script>
         <script src="/bg/js/clipboard-monitor.js"></script>
         <script src="/bg/js/conditions.js"></script>
-        <script src="/bg/js/generic-database.js"></script>
+        <script src="/bg/js/database.js"></script>
         <script src="/bg/js/dictionary-database.js"></script>
         <script src="/bg/js/dictionary-importer.js"></script>
         <script src="/bg/js/deinflector.js"></script>
