Query parser refactor (#683)
* Rename files to better match class name

* Don't pass setContent to QueryParser; use a generic event instead

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -92,8 +92,8 @@
         <script src="/mixed/js/text-scanner.js"></script>
         <script src="/mixed/js/template-handler.js"></script>
 
-        <script src="/bg/js/search-query-parser-generator.js"></script>
-        <script src="/bg/js/search-query-parser.js"></script>
+        <script src="/bg/js/query-parser-generator.js"></script>
+        <script src="/bg/js/query-parser.js"></script>
         <script src="/bg/js/clipboard-monitor.js"></script>
         <script src="/bg/js/search.js"></script>
 
