Dictionary data utility class (#698)
* Create utility class for helping format dictionary data

* Change format

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -83,6 +83,7 @@
         <script src="/fg/js/dom-text-scanner.js"></script>
         <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/audio-system.js"></script>
+        <script src="/mixed/js/dictionary-data-util.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/display-generator.js"></script>
         <script src="/mixed/js/display-history.js"></script>
