More display refactoring (#697)
* Remove some unnecessary _setQuery calls

* Add support for forcing the query parser to be visible or hidden

* Move _setEventListenersActive calls

* Remove URL for kanji links

* Refactor _setContentTermsOrKanji

* Move search query text assignment into Display

* Move title updates into Display

* Move popup close calls

* Prevent infinite loop of extension unload events

--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <title></title>
+        <title>Yomichan Search</title>
         <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
         <link rel="icon" type="image/png" href="/mixed/img/icon32.png" sizes="32x32">
@@ -21,7 +21,7 @@
             <button class="action-button action-next" data-icon="source-term" title="Next term (Alt + F)"></button>
         </div></div><div class="navigation-header-spacer"></div>
 
-        <div class="scan-disable" hidden>
+        <div class="scan-disable" id="query-parser-container" hidden>
             <div id="query-parser-select-container" class="input-group"></div>
             <div id="query-parser-content"></div>
         </div>
