--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -46,7 +46,7 @@
 
             <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
-            <div class="scan-disable">
+            <div class="scan-disable" id="query-parser-container">
                 <div id="query-parser-select-container" class="input-group"></div>
                 <div id="query-parser-content"></div>
             </div>
