--- a/ext/bg/settings-popup-preview.html
+++ b/ext/bg/settings-popup-preview.html
@@ -127,7 +127,7 @@
         <script src="/mixed/js/frame-client.js"></script>
         <script src="/mixed/js/text-scanner.js"></script>
 
-        <script src="/fg/js/document.js"></script>
+        <script src="/fg/js/document-util.js"></script>
         <script src="/fg/js/dom-text-scanner.js"></script>
         <script src="/fg/js/popup.js"></script>
         <script src="/fg/js/source.js"></script>
