--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -51,7 +51,7 @@
         <script src="/mixed/js/api.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
-        <script src="/fg/js/document.js"></script>
+        <script src="/fg/js/document-util.js"></script>
         <script src="/fg/js/dom-text-scanner.js"></script>
         <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/audio-system.js"></script>
