Json schema profile conditions (#758)
* Add clearCache function

* Add upgrade

* Use schema-based profile condition validation

* Update profile conditions settings controller

* Remove unnecessary async

* Remove old

* Remove unused templates

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -112,23 +112,21 @@
                     </div>
                 </div>
 
+                <template id="condition-group-template"><div class="condition-group">
+                    <div class="condition-list"></div>
+                    <div class="condition-group-options">
+                        <button class="btn btn-default condition-add"><span class="glyphicon glyphicon-plus"></span></button>
+                    </div>
+                    <div class="condition-group-separator-label">OR</div>
+                </div></template>
                 <template id="condition-template"><div class="input-group condition">
                     <div class="input-group-addon condition-prefix"></div>
                     <div class="input-group-btn"><select class="form-control btn btn-default condition-type"><optgroup label="Type"></optgroup></select></div>
                     <div class="input-group-btn"><select class="form-control btn btn-default condition-operator"><optgroup label="Operator"></optgroup></select></div>
                     <div class="condition-line-break"></div>
-                    <div class="condition-input"></div>
+                    <div class="condition-input"><input type="text" class="form-control condition-input-inner"></div>
                     <div class="input-group-btn"><button class="btn btn-danger condition-remove" title="Remove"><span class="glyphicon glyphicon-remove"></span></button></div>
                 </div></template>
-                <template id="condition-group-separator-template"><div class="input-group">
-                    <div class="condition-group-separator-label">OR</div>
-                </div></template>
-                <template id="condition-group-options-template"><div class="condition-group-options">
-                    <button class="btn btn-default condition-add"><span class="glyphicon glyphicon-plus"></span></button>
-                </div></template>
-                <template id="condition-input-text-template"><input type="text" class="form-control condition-input-inner" /></template>
-                <template id="condition-input-select-template"><select class="form-control condition-input-inner"></select></template>
-                <template id="condition-input-option-template"><option></option></template>
             </div>
 
             <div>
@@ -1143,7 +1141,6 @@
         <script src="/bg/js/anki-note-builder.js"></script>
         <script src="/bg/js/conditions.js"></script>
         <script src="/bg/js/options.js"></script>
-        <script src="/bg/js/profile-conditions.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio-system.js"></script>
         <script src="/mixed/js/document-util.js"></script>
@@ -1153,11 +1150,11 @@
         <script src="/bg/js/settings/audio.js"></script>
         <script src="/bg/js/settings/backup.js"></script>
         <script src="/bg/js/settings/clipboard-popups-controller.js"></script>
-        <script src="/bg/js/settings/conditions-ui.js"></script>
         <script src="/bg/js/settings/dictionaries.js"></script>
         <script src="/bg/js/settings/generic-setting-controller.js"></script>
         <script src="/bg/js/settings/popup-preview.js"></script>
         <script src="/bg/js/settings/profiles.js"></script>
+        <script src="/bg/js/settings/profile-conditions-ui.js"></script>
         <script src="/bg/js/settings/settings-controller.js"></script>
         <script src="/bg/js/settings/storage.js"></script>
         <script src="/mixed/js/dictionary-data-util.js"></script>
